{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 49,
  "lineage": "283b738d-9292-3661-511f-8bfc620f463a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elrr_xapi_gw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0152a91a92d10207d",
            "domain": "vpc",
            "id": "eipalloc-07a577a8bdc41c553",
            "instance": "i-04fcafb6e19a1614f",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0bdac881e34529897",
            "private_dns": "ip-10-0-6-225.us-east-2.compute.internal",
            "private_ip": "10.0.6.225",
            "public_dns": "ec2-3-139-26-58.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.26.58",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.elrr_xapi_gateway",
            "aws_key_pair.elrr_public_kp",
            "aws_security_group.elrr_xapi_gw_sg",
            "aws_subnet.elrr_xapi_gateway_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_agent1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-0735ebee58838c56a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-0a23f822f888a2950",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0735ebee58838c56a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elrr_private_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ed5f2430b51b0d63",
            "private_dns": "ip-10-0-24-175.us-east-2.compute.internal",
            "private_ip": "10.0.24.175",
            "public_dns": "ec2-18-117-143-148.us-east-2.compute.amazonaws.com",
            "public_ip": "18.117.143.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a23f822f888a2950",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cba88417a67d6914",
            "tags": {
              "Name": "elrr_agent1"
            },
            "tags_all": {
              "Name": "elrr_agent1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07dd391994817396b"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_private_kp",
            "aws_security_group.elrr_agent_sg",
            "aws_subnet.elrr_agent_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_agent2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-0bfa51870a71f4bc5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-0b24520544abe2efc",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bfa51870a71f4bc5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elrr_private_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-055c8195ee7a0d4d0",
            "private_dns": "ip-10-0-24-108.us-east-2.compute.internal",
            "private_ip": "10.0.24.108",
            "public_dns": "ec2-18-219-230-253.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.230.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b24520544abe2efc",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cba88417a67d6914",
            "tags": {
              "Name": "elrr_agent2"
            },
            "tags_all": {
              "Name": "elrr_agent2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07dd391994817396b"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_private_kp",
            "aws_security_group.elrr_agent_sg",
            "aws_subnet.elrr_agent_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_agent3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-051bb1df496d4aaba",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-0636e7b90473fc04e",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-051bb1df496d4aaba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elrr_private_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06930f284576ca728",
            "private_dns": "ip-10-0-24-142.us-east-2.compute.internal",
            "private_ip": "10.0.24.142",
            "public_dns": "ec2-3-135-233-160.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.233.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0636e7b90473fc04e",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cba88417a67d6914",
            "tags": {
              "Name": "elrr_agent3"
            },
            "tags_all": {
              "Name": "elrr_agent3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07dd391994817396b"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_private_kp",
            "aws_security_group.elrr_agent_sg",
            "aws_subnet.elrr_agent_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_agent4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-03522f4a7606b4a22",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-05171bedbada2577e",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03522f4a7606b4a22",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elrr_private_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-030e2cce1e123fadb",
            "private_dns": "ip-10-0-24-220.us-east-2.compute.internal",
            "private_ip": "10.0.24.220",
            "public_dns": "ec2-52-15-41-221.us-east-2.compute.amazonaws.com",
            "public_ip": "52.15.41.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05171bedbada2577e",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cba88417a67d6914",
            "tags": {
              "Name": "elrr_agent4"
            },
            "tags_all": {
              "Name": "elrr_agent4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07dd391994817396b"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_private_kp",
            "aws_security_group.elrr_agent_sg",
            "aws_subnet.elrr_agent_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-078cf6c71565271bf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-0cfb1a70d6640db6c",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-078cf6c71565271bf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elrr_public_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-097ef4b558cc60d78",
            "private_dns": "ip-10-0-12-180.us-east-2.compute.internal",
            "private_ip": "10.0.12.180",
            "public_dns": "ec2-18-224-141-46.us-east-2.compute.amazonaws.com",
            "public_ip": "18.224.141.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cfb1a70d6640db6c",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044d8acd5e87b2743",
            "tags": {
              "Name": "elrr_auth"
            },
            "tags_all": {
              "Name": "elrr_auth"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08c729273322df006"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_public_kp",
            "aws_security_group.elrr_auth_sg",
            "aws_subnet.elrr_auth_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_datasim",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-0455ab05ebd0f1459",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-0965bdd7bd6fc0f78",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0455ab05ebd0f1459",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "elrr_public_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c36e250d5184b559",
            "private_dns": "ip-10-0-28-223.us-east-2.compute.internal",
            "private_ip": "10.0.28.223",
            "public_dns": "ec2-52-14-212-18.us-east-2.compute.amazonaws.com",
            "public_ip": "52.14.212.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0965bdd7bd6fc0f78",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-091efb73ee8df99bd",
            "tags": {
              "Name": "elrr_datasim"
            },
            "tags_all": {
              "Name": "elrr_datasim"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c2fca87c4794b9df"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_public_kp",
            "aws_security_group.elrr_datasim_sg",
            "aws_subnet.elrr_datasim_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-037be0cac4c94dbfc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-0d445afae99550b28",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-037be0cac4c94dbfc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elrr_private_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06ec3825f21f74b3c",
            "private_dns": "ip-10-0-20-44.us-east-2.compute.internal",
            "private_ip": "10.0.20.44",
            "public_dns": "ec2-13-58-156-94.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.156.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d445afae99550b28",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c00df424ef46f6fe",
            "tags": {
              "Name": "elrr_kafka"
            },
            "tags_all": {
              "Name": "elrr_kafka"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06552eaa64dd05194"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_private_kp",
            "aws_security_group.elrr_kafka_sg",
            "aws_subnet.elrr_kafka_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_local_staging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-0ba6fa00cc90b5e59",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-0d62dbc764ed7c2fc",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ba6fa00cc90b5e59",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elrr_private_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c4fb9603f7f0041c",
            "private_dns": "ip-10-0-2-63.us-east-2.compute.internal",
            "private_ip": "10.0.2.63",
            "public_dns": "ec2-18-188-52-23.us-east-2.compute.amazonaws.com",
            "public_ip": "18.188.52.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d62dbc764ed7c2fc",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01bdec7a402188bab",
            "tags": {
              "Name": "elrr_local_staging"
            },
            "tags_all": {
              "Name": "elrr_local_staging"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0590cec4b4cfa3a15"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_private_kp",
            "aws_security_group.elrr_local_staging_sg",
            "aws_subnet.elrr_local_staging_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_portal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-0b885905112fcca7d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-09592be66369f108e",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b885905112fcca7d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elrr_public_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-024ef2f57feac0088",
            "private_dns": "ip-10-0-12-125.us-east-2.compute.internal",
            "private_ip": "10.0.12.125",
            "public_dns": "ec2-3-143-233-254.us-east-2.compute.amazonaws.com",
            "public_ip": "3.143.233.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09592be66369f108e",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044d8acd5e87b2743",
            "tags": {
              "Name": "elrr_portal"
            },
            "tags_all": {
              "Name": "elrr_portal"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-038ac0ee15466ec98"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_public_kp",
            "aws_security_group.elrr_portal_sg",
            "aws_subnet.elrr_auth_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_storage",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-01ef225c8ff50621a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-0d2dd8ab0446b7c10",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01ef225c8ff50621a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elrr_private_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f25ddde470ebae97",
            "private_dns": "ip-10-0-8-85.us-east-2.compute.internal",
            "private_ip": "10.0.8.85",
            "public_dns": "ec2-3-128-180-98.us-east-2.compute.amazonaws.com",
            "public_ip": "3.128.180.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d2dd8ab0446b7c10",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba21c3af3a752816",
            "tags": {
              "Name": "elrr_storage"
            },
            "tags_all": {
              "Name": "elrr_storage"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08729941e01f3c274"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_private_kp",
            "aws_security_group.elrr_storage_sg",
            "aws_subnet.elrr_storage_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_xapi_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-04fcafb6e19a1614f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-093e57d81deea9703",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04fcafb6e19a1614f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elrr_public_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bdac881e34529897",
            "private_dns": "ip-10-0-6-225.us-east-2.compute.internal",
            "private_ip": "10.0.6.225",
            "public_dns": "ec2-18-119-107-86.us-east-2.compute.amazonaws.com",
            "public_ip": "18.119.107.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-093e57d81deea9703",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0725a35f52077dba2",
            "tags": {
              "Name": "elrr_xapi_gateway"
            },
            "tags_all": {
              "Name": "elrr_xapi_gateway"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d4ce807fbaf4b341"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_public_kp",
            "aws_security_group.elrr_xapi_gw_sg",
            "aws_subnet.elrr_xapi_gateway_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_zookeeper",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-0c7c288028298521a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-012ef4f673d49ee08",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c7c288028298521a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elrr_private_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ad4ec3099baa3d8d",
            "private_dns": "ip-10-0-20-154.us-east-2.compute.internal",
            "private_ip": "10.0.20.154",
            "public_dns": "ec2-13-59-91-53.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.91.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-012ef4f673d49ee08",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c00df424ef46f6fe",
            "tags": {
              "Name": "elrr_zookeeper"
            },
            "tags_all": {
              "Name": "elrr_zookeeper"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a2fd49f026e2bf33"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_private_kp",
            "aws_security_group.elrr_zookeeper_sg",
            "aws_subnet.elrr_kafka_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "elrr_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:internet-gateway/igw-056dd8f8c8fb9c289",
            "id": "igw-056dd8f8c8fb9c289",
            "owner_id": "452917972716",
            "tags": {
              "Name": "elrr_igw"
            },
            "tags_all": {
              "Name": "elrr_igw"
            },
            "vpc_id": "vpc-0a70bbc649d912ee8"
          },
          "dependencies": [
            "aws_vpc.elrr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_agent1_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-09382bbc48b764bc3",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:ad:c5:46:9b:3e",
            "private_dns_name": "ip-10-0-24-177.us-east-2.compute.internal",
            "private_ip": "10.0.24.177",
            "private_ips": [
              "10.0.24.177"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c93ae8b5f04ecce3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cba88417a67d6914",
            "tags": {
              "Name": "elrr_agent1_interface"
            },
            "tags_all": {
              "Name": "elrr_agent1_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_agent_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_agent2_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0506b3b7d75aadc96",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:83:84:67:ce:8c",
            "private_dns_name": "ip-10-0-24-209.us-east-2.compute.internal",
            "private_ip": "10.0.24.209",
            "private_ips": [
              "10.0.24.209"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c93ae8b5f04ecce3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cba88417a67d6914",
            "tags": {
              "Name": "elrr_agent2_interface"
            },
            "tags_all": {
              "Name": "elrr_agent2_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_agent_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_agent3_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0849e4271e8b7d14a",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:b3:34:23:82:72",
            "private_dns_name": "ip-10-0-24-8.us-east-2.compute.internal",
            "private_ip": "10.0.24.8",
            "private_ips": [
              "10.0.24.8"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c93ae8b5f04ecce3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cba88417a67d6914",
            "tags": {
              "Name": "elrr_agent3_interface"
            },
            "tags_all": {
              "Name": "elrr_agent3_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_agent_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_agent4_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-01234c474e27fd3fa",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:bc:e8:3f:e3:10",
            "private_dns_name": "ip-10-0-24-17.us-east-2.compute.internal",
            "private_ip": "10.0.24.17",
            "private_ips": [
              "10.0.24.17"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c93ae8b5f04ecce3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cba88417a67d6914",
            "tags": {
              "Name": "elrr_agent4_interface"
            },
            "tags_all": {
              "Name": "elrr_agent4_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_agent_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_auth_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0bcdec9b66e984032",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:7a:14:0b:bb:22",
            "private_dns_name": "ip-10-0-12-69.us-east-2.compute.internal",
            "private_ip": "10.0.12.69",
            "private_ips": [
              "10.0.12.69"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c93ae8b5f04ecce3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044d8acd5e87b2743",
            "tags": {
              "Name": "elrr_auth_interface"
            },
            "tags_all": {
              "Name": "elrr_auth_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_auth_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_datasim_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0e5e2dede50d4052f",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:45:03:dd:65:b4",
            "private_dns_name": "ip-10-0-28-102.us-east-2.compute.internal",
            "private_ip": "10.0.28.102",
            "private_ips": [
              "10.0.28.102"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c93ae8b5f04ecce3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-091efb73ee8df99bd",
            "tags": {
              "Name": "elrr_datasim_interface"
            },
            "tags_all": {
              "Name": "elrr_datasim_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_datasim_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_kafka_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0a136273ed91cb030",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:67:ce:20:45:66",
            "private_dns_name": "ip-10-0-20-76.us-east-2.compute.internal",
            "private_ip": "10.0.20.76",
            "private_ips": [
              "10.0.20.76"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c93ae8b5f04ecce3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c00df424ef46f6fe",
            "tags": {
              "Name": "elrr_kafka_interface"
            },
            "tags_all": {
              "Name": "elrr_kafka_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_kafka_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_local_staging_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0796bd8d7e897af4e",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:f0:ea:5b:23:5c",
            "private_dns_name": "ip-10-0-2-135.us-east-2.compute.internal",
            "private_ip": "10.0.2.135",
            "private_ips": [
              "10.0.2.135"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c93ae8b5f04ecce3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01bdec7a402188bab",
            "tags": {
              "Name": "elrr_local_staging_interface"
            },
            "tags_all": {
              "Name": "elrr_local_staging_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_local_staging_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_portal_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-00dd67b6eba56870f",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:59:87:0d:7e:d0",
            "private_dns_name": "ip-10-0-16-246.us-east-2.compute.internal",
            "private_ip": "10.0.16.246",
            "private_ips": [
              "10.0.16.246"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c93ae8b5f04ecce3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034f18dbf5bb1ac36",
            "tags": {
              "Name": "elrr_portal_interface"
            },
            "tags_all": {
              "Name": "elrr_portal_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_portal_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_storage_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-026cf1d3702a96009",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:9d:d2:89:99:b4",
            "private_dns_name": "ip-10-0-8-74.us-east-2.compute.internal",
            "private_ip": "10.0.8.74",
            "private_ips": [
              "10.0.8.74"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c93ae8b5f04ecce3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba21c3af3a752816",
            "tags": {
              "Name": "elrr_storage_interface"
            },
            "tags_all": {
              "Name": "elrr_storage_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_storage_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_xapi_gw_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0c30f0fc1026aac7e",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:a2:55:dd:ca:88",
            "private_dns_name": "ip-10-0-6-131.us-east-2.compute.internal",
            "private_ip": "10.0.6.131",
            "private_ips": [
              "10.0.6.131"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c93ae8b5f04ecce3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0725a35f52077dba2",
            "tags": {
              "Name": "elrr_xapi_gw_network_interface"
            },
            "tags_all": {
              "Name": "elrr_xapi_gw_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_xapi_gateway_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_zookeeper_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0b841581cd6cd88f3",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:bb:9d:38:90:46",
            "private_dns_name": "ip-10-0-20-8.us-east-2.compute.internal",
            "private_ip": "10.0.20.8",
            "private_ips": [
              "10.0.20.8"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c93ae8b5f04ecce3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c00df424ef46f6fe",
            "tags": {
              "Name": "elrr_zookeeper_interface"
            },
            "tags_all": {
              "Name": "elrr_zookeeper_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_kafka_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elrr_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:route-table/rtb-0dd5db7667b6e09cc",
            "id": "rtb-0dd5db7667b6e09cc",
            "owner_id": "452917972716",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-056dd8f8c8fb9c289",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "elrr_route_table"
            },
            "tags_all": {
              "Name": "elrr_route_table"
            },
            "vpc_id": "vpc-0a70bbc649d912ee8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.elrr_igw",
            "aws_vpc.elrr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elrr_agent_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:security-group/sg-07dd391994817396b",
            "description": "Allow kafka and zookeeper communication",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07dd391994817396b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              }
            ],
            "name": "elrr_agent_sg",
            "name_prefix": "",
            "owner_id": "452917972716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elrr_agent_sg"
            },
            "tags_all": {
              "Name": "elrr_agent_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a70bbc649d912ee8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elrr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elrr_auth_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:security-group/sg-08c729273322df006",
            "description": "Allow connection from elrr auth",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c729273322df006",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 5453,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5453
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "elrr_auth_sg",
            "name_prefix": "",
            "owner_id": "452917972716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elrr_auth_sg"
            },
            "tags_all": {
              "Name": "elrr_auth_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a70bbc649d912ee8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elrr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elrr_datasim_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:security-group/sg-0c2fca87c4794b9df",
            "description": "Allow datasim communication",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2fca87c4794b9df",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 9091,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9091
              }
            ],
            "name": "elrr_datasim_sg",
            "name_prefix": "",
            "owner_id": "452917972716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elrr_datasim_sg"
            },
            "tags_all": {
              "Name": "elrr_datasim_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a70bbc649d912ee8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elrr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elrr_kafka_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:security-group/sg-06552eaa64dd05194",
            "description": "Allow kafka and zookeeper communication",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06552eaa64dd05194",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 2181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2181
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 2888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2888
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              }
            ],
            "name": "elrr_kafka_sg",
            "name_prefix": "",
            "owner_id": "452917972716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elrr_kafka_sg"
            },
            "tags_all": {
              "Name": "elrr_kafka_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a70bbc649d912ee8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elrr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elrr_local_staging_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:security-group/sg-0590cec4b4cfa3a15",
            "description": "Allow MySQL connectivity",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0590cec4b4cfa3a15",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 5453,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5453
              }
            ],
            "name": "elrr_local_staging_sg",
            "name_prefix": "",
            "owner_id": "452917972716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elrr_local_staging_sg"
            },
            "tags_all": {
              "Name": "elrr_local_staging_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a70bbc649d912ee8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elrr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elrr_portal_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:security-group/sg-038ac0ee15466ec98",
            "description": "Allow user connectivity",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038ac0ee15466ec98",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 5453,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5453
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "elrr_portal_sg",
            "name_prefix": "",
            "owner_id": "452917972716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elrr_portal_sg"
            },
            "tags_all": {
              "Name": "elrr_portal_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a70bbc649d912ee8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elrr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elrr_storage_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:security-group/sg-08729941e01f3c274",
            "description": "Allow MySQL connectivity",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08729941e01f3c274",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 5453,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5453
              }
            ],
            "name": "elrr_storage_sg",
            "name_prefix": "",
            "owner_id": "452917972716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elrr_storage_sg"
            },
            "tags_all": {
              "Name": "elrr_storage_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a70bbc649d912ee8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elrr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elrr_xapi_gw_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:security-group/sg-0d4ce807fbaf4b341",
            "description": "Allow TLS inbound traffic on ports 9200 \u0026 443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4ce807fbaf4b341",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              }
            ],
            "name": "elrr_xapi_gw_sg",
            "name_prefix": "",
            "owner_id": "452917972716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elrr_xapi_gw_sg"
            },
            "tags_all": {
              "Name": "elrr_xapi_gw_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a70bbc649d912ee8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elrr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elrr_zookeeper_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:security-group/sg-0a2fd49f026e2bf33",
            "description": "Allow kafka and zookeeper communication",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2fd49f026e2bf33",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 2181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2181
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 2888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2888
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              }
            ],
            "name": "elrr_zookeeper_sg",
            "name_prefix": "",
            "owner_id": "452917972716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elrr_zookeeper_sg"
            },
            "tags_all": {
              "Name": "elrr_zookeeper_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a70bbc649d912ee8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elrr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elrr_agent_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:subnet/subnet-0cba88417a67d6914",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.24.0/24",
            "id": "subnet-0cba88417a67d6914",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "452917972716",
            "tags": {
              "Name": "elrr_agent_subnet"
            },
            "tags_all": {
              "Name": "elrr_agent_subnet"
            },
            "vpc_id": "vpc-0a70bbc649d912ee8"
          },
          "dependencies": [
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elrr_auth_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:subnet/subnet-044d8acd5e87b2743",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-044d8acd5e87b2743",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "452917972716",
            "tags": {
              "Name": "elrr_auth_subnet"
            },
            "tags_all": {
              "Name": "elrr_auth_subnet"
            },
            "vpc_id": "vpc-0a70bbc649d912ee8"
          },
          "dependencies": [
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elrr_datasim_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:subnet/subnet-091efb73ee8df99bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.28.0/24",
            "id": "subnet-091efb73ee8df99bd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "452917972716",
            "tags": {
              "Name": "elrr_datasim_subnet"
            },
            "tags_all": {
              "Name": "elrr_datasim_subnet"
            },
            "vpc_id": "vpc-0a70bbc649d912ee8"
          },
          "dependencies": [
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elrr_kafka_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:subnet/subnet-0c00df424ef46f6fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-0c00df424ef46f6fe",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "452917972716",
            "tags": {
              "Name": "elrr_kafka_subnet"
            },
            "tags_all": {
              "Name": "elrr_kafka_subnet"
            },
            "vpc_id": "vpc-0a70bbc649d912ee8"
          },
          "dependencies": [
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elrr_local_staging_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:subnet/subnet-01bdec7a402188bab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-01bdec7a402188bab",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "452917972716",
            "tags": {
              "Name": "elrr_local_staging_subnet"
            },
            "tags_all": {
              "Name": "elrr_local_staging_subnet"
            },
            "vpc_id": "vpc-0a70bbc649d912ee8"
          },
          "dependencies": [
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elrr_portal_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:subnet/subnet-034f18dbf5bb1ac36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.16.0/24",
            "id": "subnet-034f18dbf5bb1ac36",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "452917972716",
            "tags": {
              "Name": "elrr_portal_subnet"
            },
            "tags_all": {
              "Name": "elrr_portal_subnet"
            },
            "vpc_id": "vpc-0a70bbc649d912ee8"
          },
          "dependencies": [
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elrr_storage_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:subnet/subnet-0ba21c3af3a752816",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-0ba21c3af3a752816",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "452917972716",
            "tags": {
              "Name": "elrr_storage_subnet"
            },
            "tags_all": {
              "Name": "elrr_storage_subnet"
            },
            "vpc_id": "vpc-0a70bbc649d912ee8"
          },
          "dependencies": [
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elrr_xapi_gateway_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:subnet/subnet-0725a35f52077dba2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0725a35f52077dba2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "452917972716",
            "tags": {
              "Name": "elrr_xapi_gateway_subnet"
            },
            "tags_all": {
              "Name": "elrr_xapi_gateway_subnet"
            },
            "vpc_id": "vpc-0a70bbc649d912ee8"
          },
          "dependencies": [
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "elrr_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:vpc/vpc-0a70bbc649d912ee8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06a907ebd0b53265e",
            "default_route_table_id": "rtb-04fb78f53b0722154",
            "default_security_group_id": "sg-0c93ae8b5f04ecce3",
            "dhcp_options_id": "dopt-29b9c642",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a70bbc649d912ee8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04fb78f53b0722154",
            "owner_id": "452917972716",
            "tags": {
              "Name": "elrr_vpc"
            },
            "tags_all": {
              "Name": "elrr_vpc"
            }
          }
        }
      ]
    }
  ]
}